# ytui

./: .gitignore  Cargo.toml  Makefile  README.md  constants.ts  package.json  testHelper.sh  types.ts  utils.ts  ytui.ts
legacy/: Makefile  main.c
spec/: data.json  data2.json  helper
src/: main.rs
